@@ -1,0 +1,245 @@
+page:
+  size: a5
+  orientation: landscape
+  margin:
+    top: 10
+    left: 10
+    bottom: 10
+    right: 10
+  header_height: 0
+  footer_height: 0
+content:
+  type: group
+  inner_loop:
+    type: loop
+    x: 0
+    y: 0
+    direction: vertical
+    page_break: true
+    gap: 3
+    header: loop_header
+    iterator: loop_iterator
+    footer: loop_footer
+loop_header:
+  type: group
+  top_line:
+    type: line
+    start:
+      x: 10
+      y: 0
+    end:
+      x: 150
+      y: 0
+  line01:
+    type: line
+    start:
+      x: 10
+      y: 0
+    end:
+      x: 10
+      y: 10
+  header1:
+    type: label
+    label: "Header1"
+    region:
+      x: 10
+      y: 0
+      width: 60
+      height: 10
+  line02:
+    type: line
+    start:
+      x: 70
+      y: 0
+    end:
+      x: 70
+      y: 10
+  header2:
+    type: label
+    label: "Header2"
+    region:
+      x: 70
+      y: 0
+      width: 50
+      height: 10
+  line03:
+    type: line
+    start:
+      x: 120
+      y: 0
+    end:
+      x: 120
+      y: 10
+  header3:
+    type: label
+    label: "Header3"
+    region:
+      x: 120
+      y: 0
+      width: 30
+      height: 10
+  line04:
+    type: line
+    start:
+      x: 150
+      y: 0
+    end:
+      x: 150
+      y: 10
+  bottom_line:
+    type: line
+    start:
+      x: 10
+      y: 10
+    end:
+      x: 150
+      y: 10
+loop_footer:
+  type: group
+  top_line:
+    type: line
+    start:
+      x: 10
+      y: 0
+    end:
+      x: 150
+      y: 0
+  line01:
+    type: line
+    start:
+      x: 10
+      y: 0
+    end:
+      x: 10
+      y: 10
+  footer1:
+    type: label
+    label: "Footer1"
+    region:
+      x: 10
+      y: 0
+      width: 60
+      height: 10
+  line02:
+    type: line
+    start:
+      x: 70
+      y: 0
+    end:
+      x: 70
+      y: 10
+  footer2:
+    type: label
+    label: "Footer2"
+    region:
+      x: 70
+      y: 0
+      width: 50
+      height: 10
+  line03:
+    type: line
+    start:
+      x: 120
+      y: 0
+    end:
+      x: 120
+      y: 10
+  footer3:
+    type: label
+    label: "Footer3"
+    region:
+      x: 120
+      y: 0
+      width: 30
+      height: 10
+  line04:
+    type: line
+    start:
+      x: 150
+      y: 0
+    end:
+      x: 150
+      y: 10
+  bottom_line:
+    type: line
+    start:
+      x: 10
+      y: 10
+    end:
+      x: 150
+      y: 10
+  
+loop_iterator:
+  type: group
+  top_line:
+    type: line
+    start:
+      x: 10
+      y: 0
+    end:
+      x: 150
+      y: 0
+  line01:
+    type: line
+    start:
+      x: 10
+      y: 0
+    end:
+      x: 10
+      y: 10
+  value1:
+    type: label
+    label: "Value 1"
+    region:
+      x: 10
+      y: 0
+      width: 60
+      height: 10
+  line02:
+    type: line
+    start:
+      x: 70
+      y: 0
+    end:
+      x: 70
+      y: 10
+  value2:
+    type: label
+    label: "Value 2"
+    region:
+      x: 70
+      y: 0
+      width: 50
+      height: 10
+  line03:
+    type: line
+    start:
+      x: 120
+      y: 0
+    end:
+      x: 120
+      y: 10
+  value3:
+    type: label
+    label: "Value 3"
+    region:
+      x: 120
+      y: 0
+      width: 30
+      height: 10
+  line04:
+    type: line
+    start:
+      x: 150
+      y: 0
+    end:
+      x: 150
+      y: 10
+  bottom_line:
+    type: line
+    start:
+      x: 10
+      y: 10
+    end:
+      x: 150
+      y: 10
